--- a/docs/constitution/欢迎来到嵌入式实验室.md
+++ b/docs/constitution/欢迎来到嵌入式实验室.md
@@ -4,8 +4,8 @@ slug: /Welcome
 title: 欢迎来到嵌入式实验室
 date: 2024-08-20
 authors: icekold
-tags: [欢迎]
+tags: [欢迎，welcome]
 keywords: [欢迎]
 ---
 
-最后欢迎来到嵌入式实验室，开始你的编程生涯吧!
+最后欢迎来到嵌入式实验室，开始你的编程生涯吧。
